--- a/FLX_homework_3/homework/scss/_variables1.scss
+++ b/FLX_homework_3/homework/scss/_variables1.scss
@@ -1,7 +1,7 @@
 $bColor: #01acac;
 $hColor: #01acac;
 $navColor: white;
-$fontFamily: sans-serif;
+$fontFamily: Roboto, Ubuntu, Cantarell, Helvetica, sans-serif;
 $postDescriptionColor: red;
 $headBackground: "../img/header_background_v1.jpg";
 $mainColor: white;
