--- a/FLX_homework_3/homework/scss/_variables2.scss
+++ b/FLX_homework_3/homework/scss/_variables2.scss
@@ -1,7 +1,7 @@
 $bColor: #0401ac;
 $hColor: #607d8a;
 $navColor: red;
-$fontFamily: initial;
+$fontFamily: "Palatino Linotype", "Book Antiqua", Palatino, serif;
 $postDescriptionColor: grey;
 $headBackground: "../img/header_background_v2.jpg";
 $mainColor: #efefef;
