--- a/FLX_homework_4/homework/css/style.css
+++ b/FLX_homework_4/homework/css/style.css
@@ -1,5 +1,3 @@
-
-
 @import url(http://fonts.googleapis.com/css?family=Open+Sans);
 
 p {
@@ -27,7 +25,6 @@ h3 {
 
 body {
     font-family: "Open Sans";
-    font
     margin: 0;
     padding: 0;
     min-width: 900px;
@@ -37,31 +34,29 @@ body {
 header {
     margin: 0;
     padding: 0;
-    background-color: bisque;
+    background: url(../img/sample2.jpg) no-repeat;
+    background-size: 100%;
+    background-position: 0px -50px;
     color: white
 }
 .hdr-top {
     padding: 0 0 0 30px;
-    background-color: burlywood;
     display: flex;
 }
 .hdr-top-logo {
     flex: auto;
     display: flex;
     justify-content: flex-start;
-    background-color: cadetblue;
 }
 .hdr-top-nav {
     flex: auto;
     display: flex;
     align-items: center;
-    background-color: cadetblue;
 }
 .hdr-top-nav .nav {
     flex: auto;
     display: flex;
     justify-content: flex-end;
-    background-color: cadetblue;
     padding: 0 20px;
 }
 .nav-a {
@@ -73,16 +68,8 @@ header {
     color: burlywood;
 }
 
-/*
-.hdr-middle {
-display: block;
-align-items: center;
-}
-*/
-
 .hdr-bottom {
     padding: 40px 0;
-    background-color: cadetblue;
 }
 
 .buttonssss {
@@ -93,7 +80,7 @@ align-items: center;
 .buttonssss .button {
     width: 150px;
     height: 40px;
-    background: rgba(0, 0, 0, 0.1);
+    background: rgba(0, 0, 0, 0.3);
     color: white;
     border: 2px solid white;
     text-decoration: none;
@@ -113,7 +100,7 @@ align-items: center;
 main {
     margin: 0;
     padding: 0;
-    background-color: bisque;
+    background-color: #F3F3F3;
 }
 
 .bdy-triangle {
@@ -125,7 +112,6 @@ main {
     font-size: 150%;
     width: auto;
     height: auto;
-    border: 1px solid green;
 }
 .bdy-top {
     display: flex;
@@ -139,7 +125,10 @@ main {
     align-items: center;
     min-width: 50%;
     padding: 20px;
-    border: 1px solid red;
+}
+
+img {
+    border: auto;
 }
 .bdy-top-texts {
     padding: 20px;
@@ -150,10 +139,10 @@ main {
 }
 
 .bdy-bottom {
-    border: 1px solid black;
     display: flex;
     justify-content: center;
     align-items: center;
+    background: #FFFFFF;
 }
 
 .nm {
@@ -187,6 +176,7 @@ main {
 .subscribe-newsletters {
     border: 1px solid green;
     padding: 10px;
+    background: #F3F3F3;
 }
 .rightside {
     display: flex-end;
@@ -208,11 +198,29 @@ main {
     font-weight: 400;
     justify-content: center;
     align-items: center;
+    border: 1px solid #097774;
 }
-
+.button-subscribe:hover {
+    background: none;
+    border: 1px solid #097774;
+    color: #097774;
+    cursor: pointer;
+}
 
 footer {
     width: auto;
     height: auto;
     background-color: bisque;
+}
+.bdy-triangle {
+    background-image: -webkit-linear-gradient(-98.5deg, #000000 50%, #ffffff 50%);
+    width: 100%;
+}
+.bdy-triangle .triangle-rigth {
+    text-align: right;
+    color: white;
+    margin: 20px 40px 0 0;
+}
+.bdy-triangle .triangle-left {
+    margin: 40px 0 0 20px;
 }
